Fix -webkit-overflow-scrolling

--- a/styles.css
+++ b/styles.css
@@ -126,7 +126,6 @@ html, body {
   .container {
     flex-direction: column;
     height: 100%;
-    -webkit-overflow-scrolling: auto;
   }
   
   .hamburger {
@@ -144,7 +143,6 @@ html, body {
     transition: left 0.3s ease;
     z-index: 100;
     overflow-y: auto;
-    -webkit-overflow-scrolling: auto;
     overscroll-behavior: contain;
 }
 
